--- a/examples/live/config.json
+++ b/examples/live/config.json
@@ -1,6 +1,6 @@
 {
   "logging": {
-    "log_name": "Log",
+    "log_name": "test",
     "log_level_console": "INFO",
     "log_level_file": "DEBUG",
     "log_level_store": "WARNING",
