--- a/examples/live/config.json
+++ b/examples/live/config.json
@@ -17,12 +17,12 @@
     "service_name": "NautilusData",
     "service_address": "localhost",
     "venue": "FXCM",
-    "tick_req_port": 55501,
-    "tick_sub_port": 55502,
-    "bar_req_port": 55503,
-    "bar_sub_port": 55504,
-    "inst_req_port": 55505,
-    "inst_sub_port": 55506
+    "tick_rep_port": 55501,
+    "tick_pub_port": 55502,
+    "bar_rep_port": 55503,
+    "bar_pub_port": 55504,
+    "inst_rep_port": 55505,
+    "inst_pub_port": 55506
   },
 
   "execClient": {
