--- a/examples/live/config.json
+++ b/examples/live/config.json
@@ -10,10 +10,11 @@
     "log_level_store": "WARNING",
     "log_to_file": true,
     "log_file_path": "logs/",
+    "redis_host": "localhost",
     "redis_port": 6379
   },
 
-  "dataClient": {
+  "data_client": {
     "service_name": "NautilusData",
     "service_address": "localhost",
     "venue": "FXCM",
@@ -25,12 +26,17 @@
     "inst_pub_port": 55506
   },
 
-  "execClient": {
+  "exec_database": {
+    "type": "redis",
+    "redis_host": "localhost",
+    "redis_port": 6379
+  },
+
+  "exec_client": {
     "service_name": "NautilusExecutor",
     "service_address": "localhost",
     "events_topic": "NAUTILUS:EVENTS",
     "commands_port": 55555,
-    "events_port": 55556,
-    "redis_port": 6379
+    "events_port": 55556
   }
 }
