--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ max-line-length = 100
 
 # Ignores
 # -------
+# E211 whitespace before '(' (imports which are hung attract this error)
 # E252 spaces around default argument assignment
 # E999 SyntaxError: invalid syntax (cimport seen as invalid syntax)
 # W293 blank line contains whitespace (temporarily until pycharm strips from
