Fix flake8 errors.

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,16 +9,17 @@
 [flake8]
 filename = *.py, *.pyx, *.pxd
 exclude = .eggs, *.egg, build, stats.py, utils.py, test_suite
-ignore = E252, E999, W293
+ignore = E225, E252, E999, W293
 max-complexity = 10
 max-line-length = 100
 
 # Ignores
 # -------
-# E211 whitespace before '(' (imports which are hung attract this error)
+# E225 missing whitespace around operator (pickups up cython casting)
 # E252 spaces around default argument assignment
 # E999 SyntaxError: invalid syntax (cimport seen as invalid syntax)
 # W293 blank line contains whitespace (temporarily until pycharm strips from
 # docstring blank lines).
 
-# E901,E225,E226,E227
+# Chainer ignores
+# E741, W503, W504, E241, E226
