--- a/examples/live/config.json
+++ b/examples/live/config.json
@@ -11,8 +11,8 @@
     "log_level_store": "WARNING",
     "log_to_file": true,
     "log_file_path": "logs/",
-    "redis_host": "localhost",
-    "redis_port": 6379
+    "host": "localhost",
+    "port": 6379
   },
 
   "strategy": {
@@ -24,12 +24,12 @@
     "service_name": "NautilusData",
     "service_address": "localhost",
     "venue": "FXCM",
-    "tick_rep_port": 55501,
-    "tick_pub_port": 55502,
-    "bar_rep_port": 55503,
-    "bar_pub_port": 55504,
-    "inst_rep_port": 55505,
-    "inst_pub_port": 55506
+    "tick_req_port": 55501,
+    "tick_sub_port": 55502,
+    "bar_req_port": 55503,
+    "bar_sub_port": 55504,
+    "inst_req_port": 55505,
+    "inst_sub_port": 55506
   },
 
   "account": {
@@ -40,8 +40,8 @@
 
   "exec_database": {
     "type": "redis",
-    "redis_host": "localhost",
-    "redis_port": 6379
+    "host": "localhost",
+    "port": 6379
   },
 
   "exec_client": {
