--- a/examples/live/config.json
+++ b/examples/live/config.json
@@ -7,7 +7,7 @@
 
   "account": {
     "broker": "FXCM",
-    "account_number": "03160894",
+    "account_number": "02402856",
     "account_type": "DEMO"
   },
 
@@ -29,8 +29,8 @@
   "messaging": {
     "version": "1.0",
     "compression": "snappy",
-    "encryption": "none",
-    "keys_dir": ""
+    "encryption": "curve",
+    "keys_dir": "/home/cjdsellers/Desktop/test_keys"
   },
 
   "data_client": {
