Re-implement messaging system.

--- a/examples/live/config.json
+++ b/examples/live/config.json
@@ -35,12 +35,10 @@
 
   "data_client": {
     "host": "localhost",
-    "tick_server_port": 55501,
-    "tick_pub_port": 55502,
-    "bar_server_port": 55503,
-    "bar_pub_port": 55504,
-    "inst_server_port": 55505,
-    "inst_pub_port": 55506,
+    "data_req_port": 55501,
+    "data_rep_port": 55502,
+    "data_pub_port": 55503,
+    "tick_pub_port": 55504,
     "venue": "FXCM"
   },
 
@@ -53,7 +51,8 @@
   "exec_client": {
     "service_name": "NautilusExecutor",
     "host": "localhost",
-    "commands_port": 55555,
-    "events_port": 55556
+    "command_req_port": 55555,
+    "command_rep_port": 55556,
+    "event_pub_port": 55557
   }
 }
