--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -5,11 +5,13 @@ phases:
     runtime-versions:
       python: 3.7
     commands:
+      - echo Setting up environment
       - apt-get update -y
+      - apt-get upgrade
   pre_build:
     commands:
-      - aws s3 cp s3://ns-dev-build/Anaconda3-2020.02-Linux-x86_64.zip Anaconda3-2020.02-Linux-x86_64.zip
-      - tar xvf Anaconda3-2020.02-Linux-x86_64.zip
+      - echo Installing dependencies
+      - aws s3 cp s3://ns-dev-build/Anaconda3-2020.02-Linux-x86_64.sh Anaconda3-2020.02-Linux-x86_64.sh
       - bash Anaconda3-2020.02-Linux-x86_64.sh
       - pip install -r requirements.txt
   build:
