--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -11,7 +11,7 @@ phases:
   pre_build:
     commands:
       - echo Installing dependencies
-      - aws s3 cp s3://ns-dev-build/Anaconda3-2020.02-Linux-x86_64.sh Anaconda3-2020.02-Linux-x86_64.sh
+      - aws s3 cp s3://ns-dev-build Anaconda3-2020.02-Linux-x86_64.sh Anaconda3-2020.02-Linux-x86_64.sh
       - bash Anaconda3-2020.02-Linux-x86_64.sh
       - pip install -r requirements.txt
   build:
