--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -11,7 +11,7 @@ phases:
   pre_build:
     commands:
       - echo Installing dependencies
-      - aws s3api copy-object --bucket ns-dev-build --key Anaconda3-2020.02-Linux-x86_64.sh
+      - wget https://repo.anaconda.com/archive/Anaconda3-2020.02-Linux-x86_64.sh
       - bash Anaconda3-2020.02-Linux-x86_64.sh
       - pip install -r requirements.txt
   build:
