--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -13,6 +13,10 @@ phases:
       - echo Installing dependencies
       - wget https://repo.anaconda.com/archive/Anaconda3-2020.02-Linux-x86_64.sh
       - bash Anaconda3-2020.02-Linux-x86_64.sh
+      - yes
+      - yes
+      - yes
+      - conda init
       - pip install -r requirements.txt
   build:
     commands:
