--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -5,15 +5,12 @@ phases:
     runtime-versions:
       python: 3.7
     commands:
-      - echo Setting up environment
       - apt-get update -y
       - apt-get upgrade -y
   pre_build:
     commands:
-      - echo Installing dependencies
       - wget https://repo.anaconda.com/archive/Anaconda3-2020.02-Linux-x86_64.sh
-      - bash Anaconda3-2020.02-Linux-x86_64.sh -y
-      - yes
+      - bash Anaconda3-2020.02-Linux-x86_64.sh -b
       - conda init
       - pip install -r requirements.txt
   build:
