--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -10,7 +10,7 @@ phases:
   pre_build:
     commands:
       - wget https://repo.anaconda.com/archive/Anaconda3-2020.02-Linux-x86_64.sh
-      - bash Anaconda3-2020.02-Linux-x86_64.sh -b
+      - bash Anaconda3-2020.02-Linux-x86_64.sh -b -p $HOME/anaconda
       - conda init
       - pip install -r requirements.txt
   build:
