--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -7,6 +7,7 @@ phases:
     commands:
       - apt-get update -y
       - apt-get upgrade -y
+      - apt install build-essential
   pre_build:
     commands:
       - wget https://repo.anaconda.com/archive/Anaconda3-2020.02-Linux-x86_64.sh
