--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -9,6 +9,7 @@ phases:
       - apt-get upgrade -y
       - apt-get install build-essential -y
       - apt-get install manpages-dev -y
+      - apt-get install libsnappy-dev -y
       - gcc --version
   pre_build:
     commands:
