--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -15,6 +15,7 @@ phases:
     commands:
       - wget https://repo.anaconda.com/archive/Anaconda3-2020.02-Linux-x86_64.sh
       - bash Anaconda3-2020.02-Linux-x86_64.sh -b -p $HOME/anaconda
+      - export PYTHONPATH=.
       - pip install -r requirements.txt
   build:
     commands:
