--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -26,3 +26,16 @@ phases:
   post_build:
     commands:
       - echo Build completed on `date`
+  reports:
+    arn:aws:s3:::ns-dev-build
+      files:
+        - "**/*"
+      base-directory: 'nautilus-trader'
+      discard-paths: no
+      file-format: TestNGXml
+  artifacts:
+    files:
+      - '**/*'
+    name: myname-$(date +%Y-%m-%d)
+    base-directory: 'nautilus-trader'
+    discard-paths: yes
