--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -15,21 +15,15 @@ phases:
     commands:
       - wget https://repo.anaconda.com/archive/Anaconda3-2020.02-Linux-x86_64.sh
       - bash Anaconda3-2020.02-Linux-x86_64.sh -b -p $HOME/anaconda
-      - export PYTHONPATH=.
       - pip install -r requirements.txt
   build:
     commands:
       - echo Build started on `date`
       - python setup.py build_ext --inplace
-      - cd scripts
-      - bash run_tests.sh
+      - python -m pytest tests/unit_tests/
+      - python -m pytest tests/integration_tests/
+      - python -m pytest tests/performance_tests/
+      - python -m pytest tests/acceptance_tests/
   post_build:
     commands:
       - echo Build completed on `date`
-
-artifacts:
-  files:
-    - '**/*'
-  name: myname-$(date +%Y-%m-%d)
-  base-directory: 'artifacts/nautilus-trader'
-  discard-paths: yes
