--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -15,7 +15,8 @@ phases:
     commands:
       - pip install -r requirements.txt
       - apt-get install redis-server -y
-      - redis-server
+      - systemctl start redis
+      - sudo systemctl status redis
   build:
     commands:
       - echo Build started on `date`
