--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -10,13 +10,12 @@ phases:
       - apt-get upgrade -y
       - apt-get install build-essential -y
       - apt-get install libsnappy-dev -y
-      - apt-get install systemd -y
       - gcc --version
   pre_build:
     commands:
       - pip install -r requirements.txt
       - apt-get install redis-server -y
-      - systemctl start redis
+      - redis-server --daemonize yes
   build:
     commands:
       - echo Build started on `date`
