--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -13,6 +13,7 @@ phases:
       - gcc --version
   pre_build:
     commands:
+      - pip install -r requirements.txt
       - apt-get install redis-server -y
       - redis-server --daemonize yes
   build:
