--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -5,16 +5,14 @@ phases:
     runtime-versions:
       python: 3.7
     commands:
-      - lsb_release -a
-      - apt-get update -y
-      - apt-get upgrade -y
-      - apt-get install build-essential -y
-      - apt-get install libsnappy-dev -y
+      - yum update -y
+      - yum group install -y "Development Tools"
+      - yum install -y libsnappy-dev
       - gcc --version
   pre_build:
     commands:
       - pip install -r requirements.txt
-      - apt-get install redis-server -y
+      - yum install -y redis-server
       - redis-server --daemonize yes
   build:
     commands:
