--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -12,7 +12,7 @@ phases:
   pre_build:
     commands:
       - pip install -r requirements.txt
-      - yum install -y redis-server
+      - yum install -y redis
       - redis-server --daemonize yes
   build:
     commands:
