--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -9,7 +9,7 @@ phases:
       - yum update -y
       - yum group install -y "Development Tools"
       - yum install -y python3-devel
-      - yum install snappy-devel
+      - yum install -y snappy-devel
       - python3 --version
       - python3 get-pip.py --user
   pre_build:
