--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -26,15 +26,11 @@ phases:
       - bash scripts/run_tests.sh
   post_build:
     commands:
+      - rm -r build
       - echo Build completed on `date`
 
 artifacts:
   files:
-    - 'nautilus_trader/**'
-    - 'nautilus_trader/examples/*'
-    - 'nautilus_trader/nautilus_trader/*'
-    - 'nautilus_trader/scripts/*'
-    - 'nautilus_trader/tests/*'
-    - 'nautilus_trader/tools/*'
+    - '**/*'
   name: nautilus-trader-$CODEBUILD_BUILD_NUMBER
   discard-paths: no
