--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -27,9 +27,8 @@ phases:
   post_build:
     commands:
       - rm -r build
-      - find . -name docs -exec rm -rf {} \;
-      - find . -name examples -exec rm -rf {} \;
-      - find . -name tests -exec rm -rf {} \;
+      - rm -r docs
+      - rm -r tests
       - find . -name __pycache__ -exec rm -rf {} \;
       - echo Build completed on `date`
 
