--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include LICENSE
 include README.md
 include requirements.txt
+include nautilus_trader/_data/news/news_events.zip
 include nautilus_trader/_data/rates/libor-1-month-USD.csv
 include nautilus_trader/_data/rates/short-term-interest.csv
 recursive-include nautilus_trader *.pxd
