Refine news event and session trading filters
- Fix bug in rollover interest calculation (incorrect use of pytz)
- Add example strategy and backtest
- Change file path for keys to generic /nautilus/ user

--- a/examples/live/config.json
+++ b/examples/live/config.json
@@ -33,7 +33,7 @@
     "api_version": "1.0",
     "compression": "snappy",
     "encryption": "curve",
-    "keys_dir": "/home/ec2-user/keys/"
+    "keys_dir": "/home/nautilus/keys/"
   },
 
   "data_client": {
