Remove snappy dependency
- Replace with pure python py_snappy library for now
- Bump version as pre-release

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ pytz>=2020.1
 pyzmq>=19.0.1
 pymongo>=3.10.1
 pytest>=5.4.3
+py-snappy>=0.1.0a1
 msgpack>=1.0.0
 redis>=3.4.1
-python-snappy>=0.5.4
 matplotlib>=2.2.2
 lz4>=3.1.0
