--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,13 @@ jobs:
       - name: Build
         run: |
           python -m pip install -r requirements.txt
-          python3 setup.py build_ext --inplace
+          python setup.py build_ext --inplace
       - name: Test
         run: bash scripts/run_tests.sh
-      - name: Post Build
-        run: python scripts/cleanup.py
+      - name: Publish
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+        run: |
+          python setup.py sdist bdist_wheel
+          twine upload dist/*
