--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,13 @@ cython>=0.29.20
 numpy>=1.18.5
 scipy>=1.5.0
 pandas>=1.0.5
+redis>=3.4.1
 psutil>=5.7.0
 pytz>=2020.1
 pyzmq>=19.0.1
 pymongo>=3.10.1
-pytest>=5.4.3
-lz4>=3.1.0
 msgpack>=1.0.0
-redis>=3.4.1
+lz4>=3.1.0
 matplotlib>=2.2.2
+flake8>=3.7.9
+pytest>=5.4.3
