Remove code coverage
- Bump version as release

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,11 +26,7 @@ jobs:
           python -m pip install -r requirements.txt
           python setup.py build_ext --inplace
       - name: Test
-        run: |
-          pip install pytest-cov
-          pytest --ignore=tests/performance_tests/ --cov=./ --cov-report=xml
-      - name: Upload Codecov
-        uses: codecov/codecov-action@v1
+        run: bash scripts/run_tests.sh
       - name: Publish
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
