Update CI workflow
- Bumped version as pre-release

--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -1,11 +1,11 @@
-name: build
+name: build-master
 
 on:
   push:
     branches: [ master ]
 
 jobs:
-  build:
+  build-test-release:
 
     runs-on: ubuntu-latest
 
@@ -15,19 +15,23 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install setuptools wheel twine
           sudo apt-get install redis-server
           sudo redis-server --daemonize yes
+
       - name: Build
         run: |
           python -m pip install -r requirements.txt
           python setup.py build_ext --inplace
+
       - name: Test
         run: bash scripts/run_tests.sh
-      - name: Publish
+
+      - name: Publish Package
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
