Update CI workflow

--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -1,7 +1,10 @@
 name: build-develop
 
-on: [push, pull_request]
-  branches: [ develop ]
+on:
+  push:
+    branches: [ develop ]
+  pull_request:
+    branches: [ develop ]
 
 jobs:
   build-test:
