--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,13 +20,17 @@ repos:
         args: [--remove]
       - id: end-of-file-fixer
       - id: trailing-whitespace
+  - repo: https://github.com/prettier/prettier
+    rev: 2.0.5
+    hooks:
+      - id: prettier
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.8.3
     hooks:
       - id: flake8
         additional_dependencies:
-#          - flake8-bandit==2.1.2
-#          - flake8-bugbear==20.1.4
+          # - flake8-bandit==2.1.2
+          #  - flake8-bugbear==20.1.4
           - flake8-rst-docstrings==0.0.13
           - pep8-naming==0.10.0
-#          - darglint==1.3.0
+          # - darglint==1.3.0
