add isort and black (commented out)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,6 +24,14 @@ repos:
     rev: 2.0.5
     hooks:
       - id: prettier
+  #  - repo: https://github.com/timothycrosley/isort
+  #    rev: 5.1.0
+  #    hooks:
+  #      - id: isort
+  #  - repo: https://github.com/psf/black
+  #    rev: 19.10b0
+  #    hooks:
+  #      - id: black
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.8.3
     hooks:
