--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,24 +14,16 @@ repos:
       - id: check-xml
       - id: check-yaml
       - id: debug-statements
-      - id: detect-aws-credentials
+  #    - id: detect-aws-credentials
       - id: detect-private-key
       - id: fix-encoding-pragma
         args: [--remove]
       - id: end-of-file-fixer
       - id: trailing-whitespace
-  - repo: https://github.com/prettier/prettier
-    rev: 2.0.5
-    hooks:
-      - id: prettier
-  #  - repo: https://github.com/timothycrosley/isort
-  #    rev: 5.1.0
-  #    hooks:
-  #      - id: isort
-  #  - repo: https://github.com/psf/black
-  #    rev: 19.10b0
-  #    hooks:
-  #      - id: black
+#  - repo: https://github.com/prettier/prettier
+#    rev: 2.0.5
+#    hooks:
+#      - id: prettier
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.8.3
     hooks:
