Separate DataClient and DataEngine
- Initial refactoring to prepare for multiple venues
- Multiple DataClients can now be registered with the DataEngine

--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -29,7 +29,9 @@ jobs:
           python setup.py build_ext --inplace
 
       - name: Test
-        run: bash scripts/run_tests.sh
+        run: |
+          cd scripts
+          bash run_tests.sh
 
       - name: Publish Package
         env:
