--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -31,4 +31,6 @@ jobs:
           python setup.py build_ext --inplace
 
       - name: Test
-        run: bash scripts/run_tests.sh
+        run: |
+          cd scripts
+          bash run_tests.sh
