[WIP] Overhaul ExecutionEngine and position identifiers
- Remove concept of ClientPositionId
- Introduce PositionId null object pattern
- AccountId simplified
- Remove broker centric language
- Performance optimization for engine needed

--- a/examples/live/config.json
+++ b/examples/live/config.json
@@ -5,8 +5,8 @@
   },
 
   "account": {
-    "broker": "FXCM",
-    "account_number": "02402856",
+    "issuer": "FXCM",
+    "identifier": "02402856",
     "account_type": "DEMO"
   },
 
